Updated the Title of the index.html file by centering it utilizing a div tag.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
     <h3 style="text-align:center;"> By: Azrael Rex Anacleto</h3>
 
-    <b> All Pure HTML Learnings </b>
-
+    <div style="text-align: center;">
+        <b>All Pure HTML Learnings</b>
+      </div>
+      
     <p align ="justify" p style="text-align:center;">
  
         First of all I would like to thank Mr. Criztian Tuplano, my gigachad and absolutely goated
